jena-shex/src/test/files/spec/negativeSyntax/bnodedot.shex
# source TurtleTests/turtle-syntax-bad-blank-label-dot-end.ttl
_:IssueShape. {
   <http://a.example/p1> .
}
